# clawd-reachy-mini

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
action-skill/: .gitignore  SKILL.md  pyproject.toml
action-skill/src/clawd_reachy_mini/: __init__.py  bridge.py  config.py  tools.py
action-skill/tests/: test_bridge.py
src/clawd_reachy_mini/: audio.py  config.py  elevenlabs.py  gateway.py  interface.py  main.py  stt.py
tests/: test_config.py  test_elevenlabs.py  test_gateway_protocol.py
